--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="superinfo">
       <p>Seg / Sex - 08:00 às 18:00</p>
       <a href="tel:+5511932067524">011 93206-7524</a>
-      <p>Rua Antonio Cândido de Alvarenga, 110, Perus - SP</p>
+      <p>Rua Antonio Cândido de Alvarenga, Perus - SP</p>
     </div>
   </div>
 
